# pkg/routes/private_routes.go
@@ -12,7 +12,7 @@ func PrivateRoutes(a *fiber.App) {
 	route := a.Group("/api/v1")
 
 	// Routes for POST method:
-	route.Post("/user/sign/out", middleware.JWTProtected(), controllers.UserSignOut) // de-authorization user
-	route.Post("/token/renew", middleware.JWTProtected(), controllers.RenewTokens)   // renew Access & Refresh tokens
-
+	route.Post("/user/sign/out", middleware.JWTProtected(), controllers.UserSignOut)  // de-authorization user
+	route.Post("/token/renew", middleware.JWTProtected(), controllers.RenewTokens)    // renew Access & Refresh tokens
+	route.Post("/review/create", middleware.JWTProtected(), controllers.CreateReview) // create review
 }
